[tool.poetry]
name = "visualise-graph-search"
version = "0.1.0"
description = "Comparing the impact of narrative filters during the graph search"
authors = ["Ines Blin <ines.blin@sony.com.fr>"]
license = "GNU General Public License"
readme = "README.md"
packages = [{include = "visualise_graph_search"}]

[tool.poetry.dependencies]
python = "3.10.6"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
pandas = "1.3.4"
numpy = "1.21.3"
jupyter = "1.0.0"
SPARQLWrapper = "1.8.5"
rdflib = "6.0.2"
lxml = "4.9.1"
protobuf = "3.19.5"
ipykernel = "6.4.2"
requests = "2.26.0"
coverage = "6.2"
plotly = "5.4.0"
tqdm = "4.62.3"
pydeps = "1.10.12"
pybind11 = "2.2.4"
wandb = "0.12.15"
bokeh = "2.4.2"
networkx = "2.7.1"
graphviz = "0.19.1"
holoviews = "1.14.8"
pyvis = "0.1.9"
dask = "2022.3.0"
fastparquet = "0.8.1"
func-timeout = "4.3.5"
sklearn = "0.0"
ray = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
